--- a/doc/addons/std/functions/hex/page.mdx
+++ b/doc/addons/std/functions/hex/page.mdx
@@ -18,9 +18,10 @@ export const metadata = {
 <Properties>
 
 
-  <Property name="value">
+  <Property name="value" required="optional" type="string">
     Any input string.
   </Property>
+
 
 
 </Properties>
@@ -28,7 +29,7 @@ export const metadata = {
 ### Output
 
 <Properties>
-  <Property name="value">
+  <Property name="value" type="string">
     The input string in its hexadecimal representation.
   </Property>
 </Properties>
