--- a/doc/addons/evm/signers/page.mdx
+++ b/doc/addons/evm/signers/page.mdx
@@ -16,29 +16,30 @@ The `evm::secret_key` signer can be used to synchronously sign a transaction.
 <Properties>
 
 
-  <Property name="secret_key" type="">
+  <Property name="secret_key" required="optional" type="string">
     The secret key used to sign messages and transactions.
   </Property>
 
 
-  <Property name="mnemonic" type="">
+  <Property name="mnemonic" required="optional" type="string">
     The mnemonic phrase used to generate the secret key. This input will not be used if the `secret_key` input is provided.
   </Property>
 
 
-  <Property name="derivation_path" type="">
+  <Property name="derivation_path" required="optional" type="string">
     The derivation path used to generate the secret key. This input will not be used if the `secret_key` input is provided.
   </Property>
 
 
-  <Property name="is_encrypted" type="">
+  <Property name="is_encrypted" required="optional" type="bool">
     Coming soon
   </Property>
 
 
-  <Property name="password" type="">
+  <Property name="password" required="optional" type="string">
     Coming soon
   </Property>
+
 
 
 </Properties>
@@ -54,12 +55,12 @@ When the `secret_key` action is successfully executed, the following outputs are
 <Properties>
 
 
-  <Property name="public_key">
+  <Property name="public_key" type="array[buffer]">
     The public key of the account generated from the secret key.
   </Property>
 
 
-  <Property name="address">
+  <Property name="address" type="array[buffer]">
     The address generated from the secret key.
   </Property>
 
@@ -106,19 +107,20 @@ This allows a Runbook operator to sign the transaction with the browser signer o
 <Properties>
 
 
-  <Property name="expected_address" type="">
+  <Property name="expected_address" required="optional" type="string">
     The EVM address that is expected to connect to the Runbook execution. Omitting this field will allow any address to be used for this signer.
   </Property>
 
 
-  <Property name="chain_id" type="">
+  <Property name="chain_id" required="required" type="string">
     The chain id.
   </Property>
 
 
-  <Property name="rpc_api_url" type="">
+  <Property name="rpc_api_url" required="required" type="string">
     The URL of the EVM API used to broadcast the transaction.
   </Property>
+
 
 
 </Properties>
@@ -134,7 +136,7 @@ When the `web_wallet` action is successfully executed, the following outputs are
 <Properties>
 
 
-  <Property name="address">
+  <Property name="address" type="array[string]">
     The address of the account generated from the public key.
   </Property>
 
